--- a/imageProjector/Base.lproj/Main.storyboard
+++ b/imageProjector/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="imageProjector" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,46 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="drL-fe-Qre">
+                                <rect key="frame" x="20" y="550" width="83" height="30"/>
+                                <state key="normal" title="Open image"/>
+                                <connections>
+                                    <action selector="buttonOpenImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9M8-6f-crR"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ze6-gd-zBy">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="542"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="evD-Dy-J8K">
+                                <rect key="frame" x="253" y="550" width="95" height="30"/>
+                                <state key="normal" title="Project image"/>
+                                <connections>
+                                    <action selector="buttonProjectImage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kbe-D9-WsK"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ze6-gd-zBy" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="HfE-oY-ZNt"/>
+                            <constraint firstItem="drL-fe-Qre" firstAttribute="top" secondItem="ze6-gd-zBy" secondAttribute="bottom" constant="8" id="JhW-Nz-prG"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="drL-fe-Qre" secondAttribute="bottom" constant="20" id="MwT-6b-gx9"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="evD-Dy-J8K" secondAttribute="bottom" constant="20" id="RMn-s1-UI7"/>
+                            <constraint firstAttribute="trailing" secondItem="ze6-gd-zBy" secondAttribute="trailing" id="UmC-s6-V6U"/>
+                            <constraint firstItem="evD-Dy-J8K" firstAttribute="centerX" secondItem="ze6-gd-zBy" secondAttribute="centerX" id="eAY-y7-oQ4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ze6-gd-zBy" secondAttribute="bottom" constant="58" id="i4X-zq-z7Q"/>
+                            <constraint firstItem="evD-Dy-J8K" firstAttribute="top" secondItem="ze6-gd-zBy" secondAttribute="bottom" constant="8" id="iEn-gP-9U1"/>
+                            <constraint firstItem="ze6-gd-zBy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="vzg-a1-hUp"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="drL-fe-Qre" secondAttribute="leading" id="xue-9W-Cpz"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imagePicked" destination="ze6-gd-zBy" id="hpq-qJ-jdI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="387"/>
         </scene>
     </scenes>
 </document>
